[project]
name = "playfield"
version = "0.1.0"
description = "Playfield"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.41",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]
